<resources>
    <string name="app_name">Dowload Manager</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="complete_download">Download completed in: </string>
    <string name="folder">Folder:</string>
    <string name="no_data_found">No Data Found</string>
    <string name="header_tab">Header</string>
    <string name="title">Advanced Download Manager</string>
    <string name="next_update">This operation will be updated soon!</string>
    <string name="paste">PASTE</string>
    <string name="editor">Editor</string>
    <string name="link">Link</string>
    <string name="hintLink">http://google.docx</string>
    <string name="fileName">Name</string>
    <string name="hintFileName">Document 1</string>
    <string name="hintUpdateTitle">Rename title</string>
    <string-array name="tab_titles">
        <item>Exit</item>
        <item>Add</item>
        <item>Download</item>
        <item>Upload</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>